@@ -1389,6 +1389,9 @@ syncrepl_message_to_op(
 				goto done;
 			op->orr_newSup = &psup;
 			op->orr_nnewSup = &nsup;
+		} else {
+			op->orr_newSup = NULL;
+			op->orr_nnewSup = NULL;
 		}
 		op->orr_newrdn = prdn;
 		op->orr_nnewrdn = nrdn;
@@ -1868,6 +1871,9 @@ retry_add:;
 				dnParent( &entry->e_name, &newp );
 				op->orr_newSup = &newp;
 				op->orr_nnewSup = &nnewp;
+			} else {
+				op->orr_newSup = NULL;
+				op->orr_nnewSup = NULL;
 			}
 			op->orr_deleteoldrdn = 0;
 			rc = be->be_modrdn( op, &rs_modify );
