@@ -9,6 +9,7 @@ OpenLDAP 2.3.28 Engineering
 	Fixed slapd setting c_sasl_bindop only on SASL binds
 	Fixed slapd return code not being propagated (ITS#4565)
 	Fixed slapd integerBitAndMatch (ITS#4672)
+	Fixed slapd syncrepl modrdn new superior (ITS#4695)
 	Fixed slapd-ldap retry with idassert (ITS#4686)
 	Fixed slapd-monitor locking with scope "subordinate" (ITS#4668)
 	Fixed slapd-perl deletes (ITS#2612)
